namespace limit management
